# kotoba-api

./: .env.example  .gitignore  pyproject.toml
.github/workflows/: ci.yml
src/kotoba_api/: app.py  models.py  services.py  util.py
src/kotoba_api/datasources/: kanjidic.py
src/schema/: schema.graphql
tests/: test_app.py
tests/fixtures/: kanjidic2.xml
tests/integration/: conftest.py  test_queries.py
tests/unit/: test_datasources.py  test_resolvers.py  test_services.py  test_utils.py
