[project]
name = "kotoba-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Tim Beattie",email = "trbeattie@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "ariadne (>=0.26.2,<0.27.0)",
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "ruff (>=0.14.11,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry]
packages = [{include = "kotoba_api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
pythonpath = ["src"]
